# Agentic_platform

./: .pre-commit-config.yaml  LICENSE  README.md  config-local.yaml  main.py  pyproject.toml
.github/workflows/: ruff.yaml
docs/: ml_system_design_doc.md
src/agent_platform/: config.py  main.py
src/agent_platform/core/: secrets.py
src/agent_platform/services/: agent.py  model.py  tools.py
