[project]
name = "agentic-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
]


[tool.ruff]
target-version = "py312"
